# llm-from-scratch

./: .gitignore  pyproject.toml
notebooks/: attention.ipynb  gpt.ipynb  mlp.ipynb  mlp.pth  pretrain.ipynb  text.ipynb
src/: attention.py  data.py  gpt.py  pretrain.py
text/: prepare.ipynb
