[project]
name = "llm-from-scratch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "black[jupyter]>=25.1.0",
    "docker>=7.1.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mypy>=1.17.1",
    "nbqa>=1.9.1",
    "numpy>=2.4.6",
    "ruff>=0.12.12",
    "tiktoken>=0.11.0",
    "torch==2.12.0",
    "transformers>=5.12.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = [
  "E","F","W",
  "I",
  "UP",
  "B",
  "C4",
  "PERF"
]
lint.ignore = [
  "E203"
]
exclude = ["venv", ".venv", "build", "dist", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["llm_from_scratch"]
